src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doors__c</fullName>
        <label>Doors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gearbox__c</fullName>
        <label>Gearbox</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                    <default>true</default>
                    <label>Automatic</label>
                </value>
                <value>
                    <fullName>Manual 5-speed</fullName>
                </value>
                <value>
                    <fullName>Manual 6-speed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCompared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCompared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductionYear__c</fullName>
        <label>Production Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Seats</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Torque__c</fullName>
        <label>Torque</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>